fixex sidebar-containser z-index

--- a/app/client/src/components/AppSidebar/style.css
+++ b/app/client/src/components/AppSidebar/style.css
@@ -32,7 +32,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 10000;
+  z-index: 1032;
   display: flex;
 }
 
